# nas-boot-server

./: .gitignore  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
nas-boot-client/: Cargo.toml  build.rs
nas-boot-client/.cargo/: config.toml
nas-boot-client/assets/: resources.rc
nas-boot-client/src/: app.rs  app_state.rs  config.rs  event_logger.rs  gui.rs  main.rs  nas.rs  system.rs  user_activity.rs  wake_mode.rs  wol.rs
nas-boot-client/wix/: License.rtf  main.wxs  nas-boot-client-config.yaml
nas-boot-server/: Cargo.toml
nas-boot-server/src/: main.rs
