[workspace]
members = ["nas-boot-client", "nas-boot-server"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = "0.10.2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
