[workspace]
members = ["nas-boot-client", "nas-boot-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", default-features = false, features = ["tokio", "http1", "json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
hostname = "0.4"
image = { version = "0.25.6", features = ["ico"] }
log = "0.4"
multi_log = "0.1.2"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tray-item = "0.10.0"
wake-on-lan = "0.2"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55.0"
yaml-rust2 = "0.10.2"
winresource = "0.1.22"
