[package]
name = "nas-boot-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Gehriger <gehriger@gmail.com>"]
description = "Client for NAS boot service"

[package.metadata.wix]
upgrade-guid = "6CFD3C18-D5B1-4ECA-80AE-27F0BA4602CD"
path-guid = "81FB475B-18B0-446E-BD41-1D22E4710554"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
hostname = "0.4"
log = "0.4"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wake-on-lan = "0.2"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["winuser", "sysinfoapi", "shellapi"] }
winreg = "0.50.0"
yaml-rust2 = "0.10.2"

[build-dependencies]
winresource = "0.1.22"
