[package]
name = "nas-boot-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Gehriger <gehriger@gmail.com>"]
description = "Client for NAS boot service"

[package.metadata.wix]
upgrade-guid = "6CFD3C18-D5B1-4ECA-80AE-27F0BA4602CD"
path-guid = "81FB475B-18B0-446E-BD41-1D22E4710554"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
env_logger = { workspace = true }
hostname = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tray-item = { workspace = true }
windows = { workspace = true }
winreg = { workspace = true }
yaml-rust2 = { workspace = true }

[build-dependencies]
winresource = { workspace = true }
image = { workspace = true, features = ["ico"] }
