[package]
name = "nas-boot-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Gehriger <gehriger@gmail.com>"]
description = "Server for NAS boot service"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", default-features = false, features = ["tokio", "http1", "json"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "7.0.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
yaml-rust2 = "0.10.2"
multi_log = "0.1.2"
