[package]
name = "nas-boot-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Gehriger <gehriger@gmail.com>"]
description = "Server for NAS boot service"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }
multi_log = { workspace = true }
